src/test/ui/parser/match-arrows-block-then-binop.stderr
error: expected pattern, found `+`
  --> $DIR/match-arrows-block-then-binop.rs:5:9
   |
LL |       } + 5
   |         ^ expected pattern
help: parenthesis are required to parse this as an expression
   |
LL |       0 => ({
LL |         0
LL |       }) + 5
   |

error: aborting due to previous error

